--- a/.github/workflows/mechosoma_windows_64_build.yml
+++ b/.github/workflows/mechosoma_windows_64_build.yml
@@ -50,6 +50,7 @@ jobs:
         msys2 -c 'cp /mingw64/bin/libgcc_s_seh-1.dll mechosoma/bin/'
         msys2 -c 'cp /mingw64/bin/libstdc++-6.dll mechosoma/bin/'
         msys2 -c 'cp /mingw64/bin/libwinpthread-1.dll mechosoma/bin/'
+        msys2 -c 'cp /mingw64/bin/libjpeg-8.dll mechosoma/bin/'
         cp MechoSoma/build/src/mechosoma.exe mechosoma/bin/
         cp MechoSoma/build/src/mechosoma.exe mechosoma/bin/mechosoma_debug.exe
     - uses: actions/upload-artifact@v1
